2010-12-10  Julien Danjou  <julien@danjou.info>

	* gnus-gravatar.el (gnus-gravatar-transform-address): Fix error when
	email address is nil.

	* message.el (message-bogus-recipient-p): Set address to "" if nil.

2010-12-10  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-request-expire-articles): Ignore expiry except for
	deletion.
	(nnir-run-imap): Only need to parse list once.

2010-12-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-script): Ignore <script>.
	(shr-tag-label): Add <label> support.

2010-12-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-ucs-to-char): Use eval-and-compile.

	* shr.el (shr-image-displayer): Work for images lined side by side.

2010-12-08  Robert Pluim  <rpluim@gmail.com>

	* gnus-demon.el (gnus-demon-init): Call run-with-timer with an integer
	parameter, since XEmacs doesn't accept t as a parameter.

2010-12-08  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-retrieve-headers): Use rassq when comparing article
	ids.
	(nnir-run-gmane): Simplify groupspec formatting.
	(nnir-request-expire-articles): New function.

2010-12-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-parse-flags): Tweak VANISHED regexp to avoid regexp
	overflow, possibly.

	* shr.el (shr-tag-table-1): Use bg/gfcolor specs on tables.
	(shr-render-td): Handle td style="" better.
	(shr-tag-table): Use the color from the style sheet.
	(shr-render-td): Make sure we copy over all the overlays, too.

2010-12-07  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-run-gmane): Restore sub-optimal test for gmane server.
	(nnir-request-article): Improve article retrieval.

2010-12-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-extra-numeric-entities): New variable.

	* mm-url.el (mm-url-decode-entities):
	* mm-decode.el (mm-shr): Use it to decode extra numeric entities.

	* lpath.el: Fbind completion-at-point for Emacs 22 and XEmacs.

2010-12-07  Stefan Monnier  <monnier@iro.umontreal.ca>
